CPI-1253: Improving test run time for integration tests.  Includes code clean up as well (#98)
merging as agreed with Mahesh and Pankaj