@@ -8,8 +8,6 @@ import static java.util.UUID.randomUUID;
 import static javax.ws.rs.core.Response.Status.OK;
 import static org.hamcrest.CoreMatchers.allOf;
 import static org.hamcrest.CoreMatchers.equalTo;
-import static org.hamcrest.CoreMatchers.is;
-import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.hasSize;
 import static uk.gov.justice.services.common.http.HeaderConstants.USER_ID;
 import static uk.gov.justice.services.test.utils.core.http.RequestParamsBuilder.requestParams;
@@ -17,13 +15,13 @@ import static uk.gov.justice.services.test.utils.core.http.RestPoller.poll;
 import static uk.gov.justice.services.test.utils.core.matchers.ResponsePayloadMatcher.payload;
 import static uk.gov.justice.services.test.utils.core.matchers.ResponseStatusMatcher.status;
 import static uk.gov.justice.services.test.utils.core.messaging.MetadataBuilderFactory.metadataOf;
+import static uk.gov.moj.cpp.listing.helper.SearchHearingHelper.pollForHearing;
 import static uk.gov.moj.cpp.listing.utils.PropertyUtil.getBaseUri;
 import static uk.gov.moj.cpp.listing.utils.PropertyUtil.readConfig;
-import static uk.gov.moj.cpp.listing.utils.QueueUtil.privateEvents;
+import static uk.gov.moj.cpp.listing.utils.QueueUtil.sendMessage;
 
 import uk.gov.justice.services.common.converter.ObjectToJsonValueConverter;
 import uk.gov.justice.services.common.converter.jackson.ObjectMapperProducer;
-import uk.gov.justice.services.integrationtest.utils.jms.JmsMessageConsumerClient;
 import uk.gov.justice.services.integrationtest.utils.jms.JmsMessageProducerClient;
 import uk.gov.justice.services.test.utils.core.http.RequestParamsBuilder;
 import uk.gov.moj.cpp.listing.it.AbstractIT;
@@ -36,39 +34,23 @@ import uk.gov.moj.cpp.listing.steps.data.ListedCaseData;
 import uk.gov.moj.cpp.listing.utils.QueueUtil;
 
 import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 import javax.json.JsonObject;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.jayway.jsonpath.Filter;
-import io.restassured.path.json.JsonPath;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.hamcrest.Matcher;
 
 
 public class EjectCaseApplicationSteps extends AbstractIT {
-    private static final Logger LOGGER = LoggerFactory.getLogger(EjectCaseApplicationSteps.class);
-
 
     private static final String PUBLIC_PROGRESSION_EVENTS_CASE_OR_APPLICATION_EJECTED = "public.progression.events.case-or-application-ejected";
 
-    private static final String LISTING_COMMAND_EJECT_CASE_OR_APPLICATION = "listing.command.eject-case-or-application";
-    private static final String EVENT_SELECTOR_CASE_EJECTED = "listing.events.case-ejected";
-    private static final String EVENT_SELECTOR_APPLICATION_EJECTED = "listing.events.application-ejected";
-
-    private static final String MEDIA_TYPE_SEARCH_HEARINGS_JSON = "application/vnd.listing" +
-            ".search.hearings+json";
-
+    private static final String MEDIA_TYPE_SEARCH_HEARINGS_JSON = "application/vnd.listing.search.hearings+json";
 
     private JmsMessageProducerClient publicEventEjectCaseOrApplication;
-    private JmsMessageConsumerClient publicEventMessageConsumerCaseApplication;
-    private JmsMessageConsumerClient privateEventsMessageCaseEjected;
-    private JmsMessageConsumerClient privateEventsMessageApplicationEjected;
-
-
-    private String request;
-
 
     private final HearingsData hearingsData;
     private ObjectMapper objectMapper = new ObjectMapperProducer().objectMapper();
@@ -79,9 +61,6 @@ public class EjectCaseApplicationSteps extends AbstractIT {
         this.hearingsData = hearingsData;
 
         publicEventEjectCaseOrApplication = QueueUtil.publicEvents.createPublicProducer();
-        publicEventMessageConsumerCaseApplication = QueueUtil.publicEvents.createPublicConsumer(PUBLIC_PROGRESSION_EVENTS_CASE_OR_APPLICATION_EJECTED);
-        privateEventsMessageCaseEjected = privateEvents.createPrivateConsumer(EVENT_SELECTOR_CASE_EJECTED);
-        privateEventsMessageApplicationEjected = privateEvents.createPrivateConsumer(EVENT_SELECTOR_APPLICATION_EJECTED);
         givenAUserHasLoggedInAsAListingOfficer(USER_ID_VALUE);
     }
 
@@ -113,7 +92,7 @@ public class EjectCaseApplicationSteps extends AbstractIT {
         UUID hearingId = randomUUID();
         CourtApplicationData courtApplicationData = hearingsData.getHearingData().get(0).getCourtApplications().get(0);
         ApplicationEjectedData ejectCaseApplicationData = ApplicationEjectedData.applicationEjected()
-                .withHearingIds(Arrays.asList(hearingId))
+                .withHearingIds(List.of(hearingId))
                 .withApplicationId(courtApplicationData.getId())
                 .withRemovalReason("SomeReason")
                 .build();
@@ -125,50 +104,12 @@ public class EjectCaseApplicationSteps extends AbstractIT {
 
         final JsonObject ejectCaseDataObject = (JsonObject) objectToJsonValueConverter.convert(ejectCaseApplicationData);
 
-        QueueUtil.sendMessage(
+        sendMessage(
                 publicEventEjectCaseOrApplication,
                 PUBLIC_PROGRESSION_EVENTS_CASE_OR_APPLICATION_EJECTED,
                 ejectCaseDataObject,
                 metadataOf(randomUUID(), PUBLIC_PROGRESSION_EVENTS_CASE_OR_APPLICATION_EJECTED).withUserId(randomUUID().toString()).build());
-
-        request = ejectCaseDataObject.toString();
-        LOGGER.info("Event published:\n\tMedia type = {} \n\tPayload = {}\n\n", PUBLIC_PROGRESSION_EVENTS_CASE_OR_APPLICATION_EJECTED, request, getLoggedInHeader());
     }
-
-    public void verifyEventCaseEjectedInActiveMQ() {
-        JsonPath jsRequest = new JsonPath(request);
-        LOGGER.debug("Request payload: {}", jsRequest.prettify());
-
-        JsonPath jsonResponse = QueueUtil.retrieveMessage(privateEventsMessageCaseEjected);
-        LOGGER.debug("jsonResponse from privateEventsMessageCaseEjected: {}", jsonResponse.prettify());
-
-        assertThat(jsonResponse.getString("hearingId"), is(jsRequest.getString("hearingIds[0]")));
-        assertThat(jsonResponse.getString("prosecutionCaseId"), is(jsRequest.getString("prosecutionCaseId")));
-    }
-
-    public void verifyEventApplicationEjectedInActiveMQ() {
-        JsonPath jsRequest = new JsonPath(request);
-        LOGGER.debug("Request payload: {}", jsRequest.prettify());
-
-        JsonPath jsonResponse = QueueUtil.retrieveMessage(privateEventsMessageApplicationEjected);
-        LOGGER.debug("jsonResponse from privateEventsMessageApplicationEjected: {}", jsonResponse.prettify());
-
-        assertThat(jsonResponse.getString("hearingId"), is(jsRequest.getString("hearingIds[0]")));
-        assertThat(jsonResponse.getString("applicationId"), is(jsRequest.getString("applicationId")));
-    }
-
-    public void verifyEventApplicationEjectedInActiveMQ(UUID hearingId) {
-        JsonPath jsRequest = new JsonPath(request);
-        LOGGER.debug("Request payload: {}", jsRequest.prettify());
-
-        JsonPath jsonResponse = QueueUtil.retrieveMessage(privateEventsMessageApplicationEjected);
-        LOGGER.debug("jsonResponse from privateEventsMessageApplicationEjected: {}", jsonResponse.prettify());
-
-        assertThat(hearingId.toString(), is(jsRequest.getString("hearingIds[0]")));
-        assertThat(jsonResponse.getString("applicationId"), is(jsRequest.getString("applicationId")));
-    }
-
-
 
     public void verifyListedCasesInHearings(boolean isAllocated, int numberOfListedCases) {
         final String searchHearingUrl = String.format("%s/%s", getBaseUri(),
@@ -191,40 +132,23 @@ public class EjectCaseApplicationSteps extends AbstractIT {
     }
 
     public void verifyCourtApplicationInHearings(boolean isAllocated, int numberOfCourtApplications) {
-        final String searchHearingUrl = String.format("%s/%s", getBaseUri(),
-                format(readConfig().getProperty("listing.range.search.hearings"), hearingsData.getHearingData().get(0).getCourtCentreId(), isAllocated));
 
         final Filter idFilter = filter(where("id").is(hearingsData.getHearingData().get(0).getId().toString()));
         final com.jayway.jsonpath.JsonPath hearingIdFilter = com.jayway.jsonpath.JsonPath.compile("$.hearings[?]", idFilter);
 
-        final RequestParamsBuilder requestParamsBuilder = requestParams(searchHearingUrl, MEDIA_TYPE_SEARCH_HEARINGS_JSON).withHeader(USER_ID, getLoggedInUser());
+        pollForHearing(hearingsData.getHearingData().get(0).getCourtCentreId().toString(), isAllocated, getLoggedInUser().toString(), new Matcher[]{
 
-        poll(requestParamsBuilder)
-                .until(
-                        status().is(OK),
-                        payload().isJson(allOf(
-                                withJsonPath(hearingIdFilter),
-                                withJsonPath("$.hearings[0].id",
-                                        equalTo(hearingsData.getHearingData().get(0).getId().toString())),
-                                withJsonPath("$.hearings[0].courtApplications", hasSize(numberOfCourtApplications))
-                        )));
+                withJsonPath(hearingIdFilter),
+                withJsonPath("$.hearings[0].id",
+                        equalTo(hearingsData.getHearingData().get(0).getId().toString())),
+                withJsonPath("$.hearings[0].courtApplications", hasSize(numberOfCourtApplications))
+        });
     }
 
     public void verifyNoHearingsReturned(boolean isAllocated) {
-        final String searchHearingUrl = String.format("%s/%s", getBaseUri(),
-                format(readConfig().getProperty("listing.range.search.hearings"), hearingsData.getHearingData().get(0).getCourtCentreId(), isAllocated));
-
-        final Filter idFilter = filter(where("id").is(hearingsData.getHearingData().get(0).getId().toString()));
-        final com.jayway.jsonpath.JsonPath hearingIdFilter = com.jayway.jsonpath.JsonPath.compile("$.hearings[?]", idFilter);
-
-        final RequestParamsBuilder requestParamsBuilder = requestParams(searchHearingUrl, MEDIA_TYPE_SEARCH_HEARINGS_JSON).withHeader(USER_ID, getLoggedInUser());
-
-        poll(requestParamsBuilder)
-                .until(
-                        status().is(OK),
-                        payload().isJson(allOf(
-                                withJsonPath("$.hearings", hasSize(0))
-                        )));
+        pollForHearing(hearingsData.getHearingData().get(0).getCourtCentreId().toString(), isAllocated, getLoggedInUser().toString(), new Matcher[]{
+                withJsonPath("$.hearings", hasSize(0))
+        });
     }
 
 }
